style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Ubuntu+Condensed&display=swap");

body {
    background-color: blanchedalmond;
    font-size: 1.2rem;
    font-weight: 500;
    font-family: "Roboto", sans-serif;
    display: grid;
    grid-template-columns: 1fr 3.5fr;
    grid-template-rows: auto;
    padding: 0;
    margin: 0;
    height: 100%;
}

.sidebar {
    background-color: #4391ce;
    display: flex;
    flex-direction: column;
    grid-column: 1/2;
    gap: 15px;
    padding-left: 2rem;
    min-width: 200px;
}

.main-page {
    grid-column: 2/3;
    display: flex;
    flex-direction: column;
}

.user-pages {
    display: flex;
    align-items: start;
}

.icons {
    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(345deg)
        brightness(119%) contrast(106%);
    display: block;
    height: 1.2rem;
    margin-right: 0.5rem;
    text-align: center;
}

.logo {
    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(345deg)
        brightness(119%) contrast(106%);
    display: inline;
    height: 45px;
}

.logo-title {
    display: flex;
    gap: 20px;
    align-items: center;
    font-size: 1.5rem;
    color: white;
    padding-top: 20px;
}

.sidebar li {
    list-style: none;
    color: white;
    display: flex;
    justify-content: left;
    align-items: flex-start;
}

ul {
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding: 15px 0;
}

.top-section {
    flex: 1;
    background-color: #ffffff;
}

.bottom-section {
    flex: 4;
    background-color: #e3e8ef;
}

.page-icon {
    height: 20px;
    padding-left: 40px;
}

.profile-pic {
    height: 40px;
    border-radius: 50%;
}

.username {
    font-size: 1rem;
    min-width: max-content;
}

.search-section {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1.5rem;
    padding-top: 15px;
    padding-right: 30px;
}

.search-bar {
    border-radius: 20px;
    border-style: 1px solid black;
    background-color: #d8dde3;
    width: 600px;
    height: 25px;
}

.left-search,
.right-search {
    display: flex;
    align-items: center;
    gap: 40px;
}

.right-search {
    padding-right: 50px;
}

.user-info {
    display: grid;
    padding: 15px 40px;
    height: 80px;
    grid-template-columns: 1fr 3fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-template-areas:
        "mainPic greeting newbtn uploadbtn sharebtn"
        "mainPic username newbtn uploadbtn sharebtn";
    align-items: center;
}

.main-pic {
    height: 80px;
    border-radius: 50%;
    grid-area: mainPic;
}

.user-greeting {
    grid-area: greeting;
    font-size: 1rem;
}

.main-username {
    grid-area: username;
    font-size: 1.5rem;
}

.new-btn {
    grid-area: newbtn;
    justify-self: right;
    margin-right: 38px;
}
.upload-btn {
    grid-area: uploadbtn;
    justify-self: right;
    margin-right: 38px;
}
.share-btn {
    grid-area: sharebtn;
    justify-self: right;
    margin-right: 38px;
}

button {
    background-color: #4391ce;
    color: white;
    border-radius: 100px;
    border-style: none;
    height: 2.5rem;
    width: 6rem;
}

.bottom-section {
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr 1fr;
    padding: 20px 40px;
    align-items: start;
}

.projects {
    grid-column: 1/2;
    grid-row: 1/3;
}

.announcement {
    grid-column: 2/3;
    grid-row: 1/2;
}

.announcement-cards {
    background-color: white;
    border-radius: 10px;
    padding: 20px 30px;
    display: flex;
    flex-direction: column;
    margin-top: 5px;
    margin-bottom: 30px;
}

.trending {
    grid-column: 2/3;
    grid-row: 2/3;
}

.ann-heading {
    font-weight: bold;
    font-size: 12px;
    margin: 5px 0;
}

.ann-body {
    font-weight: 400;
    font-size: 10px;
    color: #919191;
}

.solid {
    width: 100%;
    border-top: 2px solid #cdcbcb;
    border-radius: 2px;
    margin: 10px 0;
}

.heading {
    font-weight: 500;
    font-size: 20px;
}

.trending-profile-pic {
    height: 50px;
    width: 50px;
    border-radius: 100px;
}

.trending-cards {
    margin-top: 10px;
    background-color: white;
    border-radius: 10px;
    padding: 20px 20px;
    display: grid;
    grid-template-columns: 60px 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    gap: 10px;
    align-items: center;
}

.trending-user {
    display: flex;
    flex-direction: column;
}

.user-at {
    font-weight: 400;
    font-size: 0.9rem;
}

.user-title {
    font-weight: 400;
    font-size: 0.8rem;
    color: #818181;
    margin-top: 3px;
}

